# kuroibara

./: .env.example  .gitignore  .snyk  =2.0.0  CHANGELOG.md  CREDITS_AND_INSPIRATIONS.md  ENHANCEMENTS_SUMMARY.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  GIT_AUTOMATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  LICENSE  PHASE_1_INVESTIGATION_PLAN.md  PHASE_1_TEST_RESULTS.md  PHASE_4_TEST_RESULTS.md  PROVIDER_MONITORING_AND_FAVORITES_README.md  PROVIDER_PROGRESS.md  README.md  REMAINING_ISSUES.md  REMAINING_PROVIDERS_ISSUE.md  VERSIONING.md  check_provider_system.py  cleanup-compose.sh  debug_mangasail.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt  requirements_old.txt  setup-automation.sh  setup-ci.sh  stop-dev.sh  test_all_providers_downloads.py  test_fixes.py  test_mangadna_nsfw.py  test_mangapill_fix.py  test_mangasail_cleaned.py  (+4 more)
backend/: .dockerignore  .flake8  Dockerfile  Dockerfile.secure  README.md  analyze_provider_results.py  check_versions.py  clean_test_library.py  cleanup_orphaned_data.py  create_test_db.py  debug_config.py  debug_registry.py  flaresolverr_integration.py  init_test_db.py  provider_download_test_results.json  provider_fix_suggestions.txt  pyproject.toml  pytest.ini  requirements.txt  run_test.py  run_tests.sh  setup_test_db.py  test_all_providers.py  test_anilist_auth.py  test_api_endpoint.py  test_conditional_providers.py  test_db_connection.py  test_enhancements.py  test_excellent_providers.py  test_flaresolverr.py  test_flaresolverr_providers.py  test_integration_validation.py  test_integrations.py  test_migration_system.py  test_nsfw_providers.py  test_profile_update.py  test_provider_preferences.py  test_provider_priority.py  test_providers.py  test_relationships.py  (+3 more)
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/docs/: health_endpoints.md  mangaupdates_integration.md
backend/scripts/: create_initial_migration.py  create_test_user.py  debug_provider_matching.py  generate_individual_provider_tests.py  init_ci_db.py  init_db.py  merge_provider_configs.py  refresh_manga_chapters.py  run_migrations.py  search_all_providers.py  test_complete_workflow.py  test_enhanced_search_response.py  test_health_endpoints.py  test_hiperdex.py  test_hiperdex_basic.py  test_madaradex_parsing.py  test_providers_comprehensive.py  test_tiered_indexing.py
backend/tests/: check_active_providers.py  comprehensive_provider_test.py  conftest.py  fix_provider_configs.py  test_agent_system.py  (+39 more)
(+405 files in other folders)
